[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "88-merge-sorted-array"

[[bin]]
name = "27-remove-element"

[[bin]]
name = "26-remove-duplicates-from-sorted-array"

[[bin]]
name = "80-remove-duplicates-from-sorted-array-ii"

[[bin]]
name = "169-majority-element"

